--- a/catalogo2.html
+++ b/catalogo2.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/styles.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -12,20 +11,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <title>Mesas</title>
+    <title>Catalogo 2</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">MuebleriaEscalonSV</a>
+            <a class="navbar-brand" href="index.html">Art Carving SV</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./indexcatalogo.html">Home</a>
+                  <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Servicios</a>
@@ -42,9 +41,9 @@
         <div class="row py-5">
             <div class="col-md-6 col-sm-12 col-lg-4 mb-4">
                 <div class="card" id="cards">
-                    <img src="./assets/img/mesa1.jpg" class="card-img-top" alt="..." id="imgMesas">
+                    <img src="../assest/img/imgh.jpg" class="card-img-top" alt="imagen vitrinal">
                     <div class="card-body">
-                        <h5 class="card-title">Mesa naranja</h5>
+                        <h5 class="card-title">Vitrinal 1</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <a href="https://api.whatsapp.com/send?phone=50378761420&text=Hola, Nececito mas informacion!" class="btn btn-success">Más información por WhatsApp</a>
                         <button type="button" class="btn btn-outline-success">$150.00</button>
@@ -53,9 +52,9 @@
             </div>
             <div class="col-md-6 col-sm-12 col-lg-4 mb-4">
                 <div class="card" id="cards">
-                    <img src="./assets/img/mesa2.jpeg" class="card-img-top" alt="..." id="imgMesas">
+                    <img src="./assest/img/imgf.jpg" class="card-img-top" alt="imagen vitrinal">
                     <div class="card-body">
-                        <h5 class="card-title">Mesa madera en azul</h5>
+                        <h5 class="card-title">Vitrinal 2</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <a href="https://api.whatsapp.com/send?phone=50378761420&text=Hola, Nececito mas informacion!" class="btn btn-success">Más información por WhatsApp</a>
                         <button type="button" class="btn btn-outline-success">$150.00</button>
@@ -64,9 +63,9 @@
             </div>
             <div class="col-md-6 col-sm-12 col-lg-4 mb-4">
                 <div class="card" id="cards">
-                    <img src="./assets/img/mesa3.jpg" class="card-img-top" alt="..." id="imgMesas">
+                    <img src="./assest/img/imgv.jpg" class="card-img-top" alt="imagen vitrinal">
                     <div class="card-body">
-                        <h5 class="card-title">Mesa celeste</h5>
+                        <h5 class="card-title">Vitrinal 3</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <a href="https://api.whatsapp.com/send?phone=50378761420&text=Hola, Nececito mas informacion!" class="btn btn-success">Más información por WhatsApp</a>
                         <button type="button" class="btn btn-outline-success">$150.00</button>
@@ -75,9 +74,9 @@
             </div>
             <div class="col-12 col-sm-6 col-lg-4 mb-4 ">
                 <div class="card" id="cards">
-                    <img src="./assets/img/mesa4.jpg" class="card-img-top" alt="..." id="imgMesas">
+                    <img src="./assest/img/imgf.jpg" class="card-img-top" alt="imagen vitrinal">
                     <div class="card-body">
-                        <h5 class="card-title" id="mesa4">Mesa madera base metalica</h5>
+                        <h5 class="card-title" id="mesa4">Vitrinal 4</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <a href="https://api.whatsapp.com/send?phone=50378761420&text=Hola, Nececito mas informacion!" class="btn btn-success">Más información por WhatsApp</a>
                         <button type="button" class="btn btn-outline-success">$150.00</button>
@@ -86,9 +85,9 @@
             </div>
             <div class="col-12 col-sm-6 col-lg-4 mb-4 ">
                 <div class="card" id="cards">
-                    <img src="./assets/img/mesa5.jpg" class="card-img-top" alt="..." id="imgMesas">
+                    <img src="../assest/img/imgv.jpg" class="card-img-top" alt="imagen vitrinal">
                     <div class="card-body">
-                        <h5 class="card-title">Mesa madera cristal</h5>
+                        <h5 class="card-title">Vitrinal 5</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <a href="https://api.whatsapp.com/send?phone=50378761420&text=Hola, Nececito mas informacion!" class="btn btn-success">Más información por WhatsApp</a>
                         <button type="button" class="btn btn-outline-success">$150.00</button>
@@ -97,9 +96,9 @@
             </div>
             <div class="col-12 col-sm-6 col-lg-4 mb-4 ">
                 <div class="card" id="cards">
-                    <img src="./assets/img/mesa6.jpg" class="card-img-top" alt="..." id="imgMesas">
+                    <img src="../assest/img/imgh.jpg" class="card-img-top" alt="imagen vitrinal">
                     <div class="card-body">
-                        <h5 class="card-title">Mesa comedor sencilla</h5>
+                        <h5 class="card-title">Vitrinal 6</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <a href="https://api.whatsapp.com/send?phone=50378761420&text=Hola, Nececito mas informacion!" class="btn btn-success">Más información por Whatsapp</a>
                         <button type="button" class="btn btn-outline-success">$150.00</button>
@@ -108,9 +107,9 @@
             </div>
             <div class="col-12 col-sm-6 col-lg-4 mb-4 ">
                 <div class="card" id="cards">
-                <img src="./assets/img/mesa1.jpg" class="card-img-top" alt="..." id="imgMesas">
+                <img src="./assest/img/imgv.jpg" class="card-img-top" alt="imagen vitrinal">
                 <div class="card-body">
-                    <h5 class="card-title">Mesa naranja</h5>
+                    <h5 class="card-title">Vitrinal 7</h5>
                     <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     <a href="https://api.whatsapp.com/send?phone=50378761420&text=Hola, Nececito mas informacion!" class="btn btn-success">Más información por WhatsApp</a>
                         <button type="button" class="btn btn-outline-success">$150.00</button>
@@ -119,9 +118,9 @@
             </div>
             <div class="col-12 col-sm-6 col-lg-4 mb-4 ">
                 <div class="card" id="cards">
-                    <img src="./assets/img/mesa6.jpg" class="card-img-top" alt="..." id="imgMesas">
+                    <img src="./assest/img/imgf.jpg" class="card-img-top" alt="imagen vitrinal">
                     <div class="card-body">
-                        <h5 class="card-title">Mesa sencilla</h5>
+                        <h5 class="card-title">Vitrinal 8</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <a href="https://api.whatsapp.com/send?phone=50378761420&text=Hola, Nececito mas informacion!" class="btn btn-success">Más información por WhatsApp</a>
                         <button type="button" class="btn btn-outline-success">$150.00</button>
@@ -130,9 +129,9 @@
             </div>
             <div class="col-12 col-sm-6 col-lg-4 mb-4 ">
                 <div class="card" id="cards">
-                    <img src="./assets/img/mesa6.jpg" class="card-img-top" alt="..." id="imgMesas">
+                    <img src="./assest/img/imgv.jpg" class="card-img-top" alt="imagen vitrinal">
                     <div class="card-body">
-                        <h5 class="card-title">Mesa sencilla</h5>
+                        <h5 class="card-title">Vitrinal 9</h5>
                         <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                         <a href="https://api.whatsapp.com/send?phone=50378761420&text=Hola, Nececito mas informacion!" class="btn btn-success">Más información por WhatsApp</a>
                         <button type="button" class="btn btn-outline-success">$150.00</button>
